# poetry2nix-private-pypi-demo

./: .gitmodules  README.md  default.nix  passwordfile
test_package/: setup.py
test_package/test_package/: __init__.py
user_project/: .netrc  default.nix  pyproject.toml  repository-credentials.json
